:sparkles: Added Basic and Structural Components
Page,Body,Head,Link,String added.
Entity renamed to Component
Navbar and Dropdown Shell Added

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
-    "dev": "tsc & node .\\dist\\index.js",
-    "test": "jest"
+    "dev": "ts-node-dev src/index.ts",
+    "prebuild": "jest",
+    "build": "tsc"
   },
   "dependencies": {
     "ts-node": "^10.9.1",
