--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "types": "index.d.ts",
   "repository": "https://github.com/SujalChoudhari/SolarisUI.git",
   "keywords": [
-    "Ui", "solaris", "websites"
+    "Ui",
+    "solaris",
+    "websites"
   ],
   "author": "Sujal Choudhari <sjlchoudhari@gmail.com>",
   "license": "MIT",
@@ -18,6 +20,7 @@
     "prepublish": "tsc"
   },
   "dependencies": {
+    "htmlparser2": "^8.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
