--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "htmlparser2": "^8.0.2",
+    "mustache": "^4.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
@@ -30,6 +31,7 @@
     "@babel/preset-typescript": "^7.21.0",
     "@types/babel-core": "^6.25.7",
     "@types/jest": "^29.5.0",
+    "@types/mustache": "^4.2.2",
     "@types/node": "^18.15.3",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
