--- a/package.json
+++ b/package.json
@@ -20,21 +20,23 @@
     "prepublish": "tsc"
   },
   "dependencies": {
+    "colorette": "^2.0.19",
     "htmlparser2": "^8.0.2",
+    "jest": "^29.5.0",
     "mustache": "^4.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
     "@types/babel-core": "^6.25.7",
     "@types/jest": "^29.5.0",
     "@types/mustache": "^4.2.2",
     "@types/node": "^18.15.3",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
     "ts-node-dev": "^2.0.0",
     "typedoc": "^0.23.28"
   },
