--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
   ],
   "exclude": ["node_modules", "**/*.spec.ts"],
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
+    "moduleResolution": "node",
+    "allowJs": true,
+    "noEmit": true,
     "lib": [
       "es2017","DOM"
     ],
@@ -16,6 +19,6 @@
     "esModuleInterop": true,
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
-    "declaration": true
+    "declaration": true,
   }
 }
