--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@sujalchoudhari/solaris-ui",
   "version": "1.0.1-alpha.4",
   "description": "A UI framework to create HTML pages with just JavaScript.",
-  "main": "dist/index.js",
-  "types": "index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "https://github.com/SujalChoudhari/SolarisUI.git",
   "keywords": [
     "Ui",
