--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "ESNext",
     "moduleResolution": "node",
     "allowJs": true,
-    "noEmit": true,
+    "noEmit": false,
     "lib": [
       "es2017","DOM"
     ],
