--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "@sujalchoudhari/solaris-ui",
-  "version": "1.0.1-alpha.4",
+  "version": "1.0.1-alpha.5",
   "description": "A UI framework to create HTML pages with just JavaScript.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/SujalChoudhari/SolarisUI.git",
   "keywords": [
-    "Ui",
+    "UI",
     "solaris",
-    "websites"
+    "framework",
+    "html",
+    "javascript",
+    "websites",
+    "static",
+    "template"
   ],
   "author": "Sujal Choudhari <sjlchoudhari@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
     "prebuild": "jest",
     "build": "tsc",
     "docs": "typedoc",
@@ -23,7 +27,6 @@
     "colorette": "^2.0.19",
     "htmlparser2": "^8.0.2",
     "mustache": "^4.2.0",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
@@ -37,7 +40,6 @@
     "@types/node": "^18.15.3",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
-    "ts-node-dev": "^2.0.0",
     "typedoc": "^0.23.28"
   },
   "jest": {
