--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepublish": "tsc"
   },
   "dependencies": {
-    "colorette": "^2.0.19",
+    "ansi-colors": "^4.1.3",
     "htmlparser2": "^8.0.2",
     "mustache": "^4.2.0",
     "ts-node": "^10.9.1",
